<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    tools:context=".MainActivity">

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/daneP"
      android:textStyle="bold"
      android:textSize="20dp"
      android:layout_marginBottom="15dp"
      />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imie"
        android:hint="@string/Imie"
        android:textStyle="bold"
        android:layout_marginBottom="15dp"
        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nazwisko"
        android:hint="@string/Nazwisko"
        android:textStyle="bold"
        android:layout_marginBottom="15dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stanowisko"
            android:textStyle="bold"
            />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:id="@+id/stanowisko"
            />

    </LinearLayout>


    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/generowanieHa"
        android:textSize="20dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dlugoscZ"
        android:id="@+id/ileZnakow"
        android:inputType="number"
        />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/litery"
        android:text="@string/litery"
        android:checked="true"
        />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cyfry"
        android:text="@string/cyfry"

        />


    <CheckBox
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/znakiSpecjalne"
    android:text="@string/znakiSpecjalne"

    />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/przyciskGeneruj"
        android:text="@string/generujH"
        android:layout_gravity="end"
        />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/zatwierdz"
        android:id="@+id/przyciskZatwierdz"
        />


</LinearLayout>